# log-analyzer

./: .gitignore  LICENSE  README.md  log_analyzer.py  pyproject.toml  requirements.txt
tests/: test_log_analyzer.py
